objects/GoogleCalenderInfo__c.object
<CustomObject><fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Expire_In__c</fullName>
        <label>Expire In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>GoogleCalenderInfo</label><visibility>Public</visibility></CustomObject>